--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <title>Title</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&family=Roboto:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&family=Roboto:wght@300;500&display=swap" rel="stylesheet">
 </head>
 <body>
 <div id="root"></div>
