--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Investigation board</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&family=Roboto:wght@300;500&display=swap" rel="stylesheet">
+    <link rel="icon"  type="image/png" href="./favicon.png">
+
 </head>
 <body>
 <div id="root"></div>
